# concept-gradients

./: .gitignore  README.md  pyproject.toml  setup.py
examples/ChestX-Det/: data.py  extract_gs_result.py  model.py  train.py  train_entire.sh  train_freezed.sh  train_scratch.sh  utils.py
examples/Duplicate-ResBlocks/: attribute-cg.sh  eval_recall.sh  eval_x2c_accuracy.sh  train.sh  trainer.py
examples/Myocardial/: attribute-cav.sh  attribute-cg.sh  attribute_cav.py  attribute_cg.py  data.py  model.py  train-cav.sh  train_cav.py  train_myocardial_classifier.ipynb
scripts/: attribute-cav.sh  attribute-ce.sh  attribute-cg.sh  attribute-cg_pinv.sh  attribute-ig.sh  attribute-scg.sh  create_cuba-unvoted.sh  dump_cav_metrics.py  eval_recall.sh  eval_recall_pinv.sh  eval_x2c_accuracy.sh  train-cav.sh  train-cg_cuba-unvoted_x2c.sh  train-cg_cuba-unvoted_x2y.sh  train_cub.sh
src/cg/: attribute_cav.py  attribute_ce.py  attribute_cg.py  attribute_ig.py  attribute_scg.py  concept_gradients.py  dataset.py  eval_recall_class.py  eval_recall_sample.py  eval_x2c_accuracy.py  loader.py  tcav.py  tcav_ttest.py  train_cg.py  train_tcav.py  train_utils.py
src/cg/CUB/: config.py  data_processing.py  generate_new_data.py
src/cg/models/: duplicate_resblock_resnet.py
